tests/is/comptime_field_type.rz
struct Foo {
    a: int
}

var f = Foo()
print f is Foo

print f.a is any // error: variable is not of type 'any'